# learn-actix

./: .gitignore  README.md
.github/workflows/: rust.yml
learn-serde/: .gitignore  Cargo.toml
learn-serde/src/: main.rs
learn-tokio/: Cargo.toml
learn-tokio/src/: main.rs
project-1/: Cargo.toml
project-1/src/: main.rs
project-2/: Cargo.toml
project-2/src/: main.rs
project-3/: Cargo.toml  customer_table.json
project-3/src/: main.rs
project-4/: Cargo.toml
project-4/src/: login.rs  main.rs  operations.rs  register.rs
project-5/: Cargo.toml
project-5/src/: lobby.rs  main.rs  message.rs  start_connection.rs  ws.rs
