[package]
name = "project-4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
bcrypt = "0.15.1"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
rusoto_core = "0.48.0"
rusoto_dynamodb = "0.48.0"
serde = { version = "1.0.201", features = ["derive"] }
