[package]
name = "project-5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-rt = "2.10.0"
actix-web = "4.7.0"
actix-web-actors = "4.3.0"
uuid = {version = "1.8.0", features = ["v4", "serde"]}

